<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Main Content Layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C5C7C9">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="405dp"
            android:layout_height="0dp"
            android:background="@drawable/background_driver"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="7dp"
                    android:gravity="center"
                    android:text="@string/hello_user_welcome_to_driver_dashboard"
                    android:textColor="#000000" />

                <ImageView
                    android:id="@+id/open_drawer_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="22dp"
                    android:layout_marginBottom="12dp"
                    app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="8dp"
                    android:layout_toStartOf="@+id/open_drawer_button"
                    app:srcCompat="@drawable/image" />

            </RelativeLayout>

            <FrameLayout
                android:id="@+id/main_content_frame1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                </androidx.constraintlayout.widget.ConstraintLayout>

                <!-- Your main content goes here -->
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="#C5C7C9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/driver_scanner_ind1"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/driver_house_ind1"
                    app:layout_constraintStart_toEndOf="@+id/driver_profile_ind1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:drawable/ic_menu_camera" />

                <ImageView
                    android:id="@+id/driver_house_ind1"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_marginEnd="60dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:drawable/ic_menu_mylocation" />

                <ImageView
                    android:id="@+id/driver_profile_ind1"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_marginStart="60dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:drawable/ic_menu_my_calendar" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.bottomnavigation.BottomNavigationView>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- Custom Navigation Drawer -->
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="horizontal"
        android:padding="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/back2">

            <ImageView
                android:id="@+id/driver_imageView"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/img" />

            <TextView
                android:id="@+id/driver_home_Idx"
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:background="#00ddff"
                android:gravity="center"
                android:text="@string/home"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/driver_imageView" />

            <TextView
                android:id="@+id/driver_scanner"
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/scanner"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/driver_home_Idx" />

            <TextView
                android:id="@+id/driver_profile"
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/profile"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/driver_scanner" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>
